// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders children as normal if they are not of type DropdownMenu or DropdownActivator 1`] = `
<CustomTag
  className={null}
  componentClasses="weave-has-dropdown"
  componentRef={[Function]}
  componentStyles={Object {}}
  href={null}
  onClick={null}
  right={false}
  style={Object {}}
  tag="span"
  type={null}
  value={null}
>
  <div
    key=".0"
  >
    Hello!
  </div>
</CustomTag>
`;

exports[`Dropdown renders correctly with default values 1`] = `
<span
  className="weave-has-dropdown"
  href={null}
  onClick={null}
  style={Object {}}
  type={null}
  value={null}
>
  <span
    className="weave-dropdown-activator"
    href={null}
    onClick={[Function]}
    style={
      Object {
        "cursor": "pointer",
      }
    }
    type={null}
    value={null}
  >
    Click here to open dropdown!
  </span>
</span>
`;

exports[`Dropdown renders no dropdown if no children are found 1`] = `
<CustomTag
  className={null}
  componentClasses="weave-has-dropdown"
  componentRef={[Function]}
  componentStyles={Object {}}
  href={null}
  onClick={null}
  right={false}
  style={Object {}}
  tag="span"
  type={null}
  value={null}
/>
`;

exports[`DropdownMenu renders with DropdownMenuItems if true 1`] = `
<DropdownMenu
  displayAsMenuItems={true}
  dropdownVisible={true}
  right={false}
  tag="ul"
>
  <CustomTag
    className={null}
    componentClasses="weave-dropdown-menu"
    componentRef={null}
    componentStyles={Object {}}
    displayAsMenuItems={true}
    dropdownVisible={true}
    href={null}
    onClick={null}
    right={false}
    style={Object {}}
    tag="ul"
    type={null}
    value={null}
  >
    <ul
      className="weave-dropdown-menu"
      href={null}
      onClick={null}
      style={Object {}}
      type={null}
      value={null}
    >
      <DropdownMenuItem
        content="hi"
        key=".0"
      >
        <li
          className="weave-dropdown-menu__item"
        >
          hi
        </li>
      </DropdownMenuItem>
    </ul>
  </CustomTag>
</DropdownMenu>
`;
